--- a/description/package.json
+++ b/description/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "new.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "run": "node new.js",
+    "dev": "node -r dotenv/config new.js"
   },
   "author": "",
   "license": "ISC",
@@ -11,8 +12,12 @@
   "dependencies": {
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
+    "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
     "os": "^0.1.2",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5"
   }
 }
