--- a/homeTask/package.json
+++ b/homeTask/package.json
@@ -4,7 +4,7 @@
   "main": "shelve.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2 start shelve.js"
+    "start": "node shelve.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
+    "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
     "uuid": "^10.0.0"
   },
