--- a/homeTask/package.json
+++ b/homeTask/package.json
@@ -13,9 +13,12 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
